Buildout now includes PIL

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,8 @@ develop = .
 
 parts = 
     python
+    django
+    PIL
     
 eggs =
     django-creators
@@ -12,3 +14,20 @@ eggs =
 recipe = zc.recipe.egg
 interpreter = python
 eggs = ${buildout:eggs}
+
+[django]
+recipe = djangorecipe
+version = 1.2.1
+project = creators
+projectegg = creators
+settings = settings
+eggs = 
+    ${buildout:eggs}
+    PIL
+
+[PIL]
+find-links = http://dist.repoze.org/
+recipe = zc.recipe.egg
+egg = 
+    ${buildout:eggs}
+    PIL
