Trying to get the deployment to work

--- a/production.cfg
+++ b/production.cfg
@@ -1,5 +1,4 @@
 [buildout]
-
 develop = .
 parts = 
     python
@@ -19,6 +18,7 @@ version = 1.2.1
 project = creators
 projectegg = creators
 settings = settings
+wsgi = true
 eggs = 
     ${buildout:eggs}
     PIL
