--- a/production.cfg
+++ b/production.cfg
@@ -18,6 +18,7 @@ project = creators
 projectegg = creators
 settings = settings
 wsgi = true
+wsgilog = "wsgi_log"
 settings = production
 eggs = 
     ${buildout:eggs}
