Fixed some buildout configurations. Integrated users into the database table

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,11 +3,15 @@ develop = .
 parts = 
     python
     django
-    PIL
+
 
 eggs =
     django-creators
-    
+
+find-links =  
+           http://pypi.zopyx.com
+           http://dist.supervisord.org/
+
 [python]
 recipe = zc.recipe.egg
 interpreter = python
@@ -21,9 +25,9 @@ projectegg = creators
 settings = settings
 eggs = 
     ${buildout:eggs}
+    PIL
 
 [PIL]
-find-links = http://dist.repoze.org/
 recipe = zc.recipe.egg
-egg = 
-    ${buildout:eggs}
+egg = PIL==1.1.6
+find-links = http://dist.repoze.org/PIL-1.1.6.tar.gz
