Working on getting natural keys to process

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,15 +19,16 @@ eggs = ${buildout:eggs}
 
 [django]
 recipe = djangorecipe
-version = 1.2.1
-project = creators
-projectegg = creators
+version = 1.2-beta-1
+project = ssaw.portal
+projectegg = ssaw.portal
 settings = settings
 eggs = 
-    ${buildout:eggs}
-    PIL
+     ${buildout:eggs}
+extra-paths = 
+    ${PIL:extra-path} 
 
 [PIL]
-recipe = zc.recipe.egg
-egg = PIL==1.1.6
-find-links = http://dist.repoze.org/PIL-1.1.6.tar.gz
+recipe = zerokspot.recipe.distutils
+urls = 
+    http://effbot.org/downloads/Imaging-1.1.6.tar.gz
