Buildout fixed to use the latest version of django (1.2.1 beta). You can now request just friends statuses

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,8 +9,8 @@ eggs =
     django-creators
 
 find-links =  
-           http://pypi.zopyx.com
-           http://dist.supervisord.org/
+   http://pypi.zopyx.com
+   http://dist.supervisord.org/
 
 [python]
 recipe = zc.recipe.egg
@@ -20,8 +20,8 @@ eggs = ${buildout:eggs}
 [django]
 recipe = djangorecipe
 version = 1.2-beta-1
-project = ssaw.portal
-projectegg = ssaw.portal
+project = creators
+projectegg = creators
 settings = settings
 eggs = 
      ${buildout:eggs}
