Removed all those pesky debug statements

--- a/production.cfg
+++ b/production.cfg
@@ -3,8 +3,14 @@ develop = .
 parts = 
     python
     django
+
+
 eggs =
     django-creators
+
+find-links =  
+   http://pypi.zopyx.com
+   http://dist.supervisord.org/
     
 [python]
 recipe = zc.recipe.egg
